--- a/public/css/gral.css
+++ b/public/css/gral.css
@@ -122,7 +122,7 @@ footer section {
 }
 
 
-@media (min-width: 361px) {
+@media (min-width: 768px) {
     #navs {
         display: flex;
         flex-wrap: wrap;
@@ -166,6 +166,8 @@ footer section {
         align-self: center;
         justify-self: right;
         margin-left: 10px;
+        align-items: center;
+        flex-grow: 1;
 
     }
 
@@ -173,40 +175,38 @@ footer section {
         border-radius: 3px;
         box-shadow: 0px 0px 5px rgb(100, 100, 100);
         justify-self: center;
+        height: 35px;
     }
 
     #enCuotas {
         text-align: left;
         justify-items: left;
         display: flex;
-        width: 30%;
+        width: 15%;
         margin: auto;
-        justify-self: right;
         padding: 0;
     }
 
     #look {
         display: flex;
         justify-self: flex-end;
-        position: static;
-        background-color: #ebebeb;
-        padding: 1.5px;
-        border: #666 1px solid;
-        border-radius: 3px;
-        color: black;
-        right: 6.5%;
+        position: relative;
         align-self: center;
-        justify-self: flex-end;
-        margin: 4px;
+        color: #666;
+        padding: 1.5px;
     }
 }
 
-@media (min-width: 769px) {
+/*@media (min-width: 769px) {
     #navs {
         display: flex;
+        font-size: large;
+    }
+    #enCuotas{
+        font-size: large;
     }
 
     .burger-menu {
         display: none;
     }
-}
+}*/
