--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,4 +1,4 @@
-.registro{
+.registro, .login{
     width: 70%;
     text-align: left;
     padding-top: 15px;
@@ -6,7 +6,7 @@
     margin: auto;
 }
 
-.registro .datos_basicos input, .password input{
+.registro .datos_basicos input, .password input, .login input{
     padding: 5px;
     margin-bottom: 25px;
     height: 40px;
@@ -34,12 +34,15 @@ label input{
     margin-left: 10px;
 }
 
-.enviar button{
+button.enviar{
+    text-align: center;
+    display: block;
     background-color: #1259c3;
     color: white;
-    font-size: 12px;
+    font-size: 16px;
     width: 100%;
     height: 30px;
-    border-radius: 5%;
+    border-radius: 5px;
+    text-decoration: none;
 }
 
