--- a/src/views/home.html
+++ b/src/views/home.html
@@ -39,7 +39,7 @@
             <nav>
                 <ul>
                     <li><a href="/register">Creá tu cuenta <span><i class="far fa-id-card"></i></span></a></li> 
-                    <li>Ingresá <span><i class="fas fa-sign-in-alt"></i></i></span></li> 
+                    <li><a href="/login">Ingresá <span><i class="fas fa-sign-in-alt"></i></span></a></li> 
                     <li>Mis compras <span><i class="fas fa-shopping-basket"></i></span></li>
                 </ul>
             </nav>
@@ -81,7 +81,7 @@
                <img class = "prodImg" src=".\images\img-tv-samsung-smart.jpg" alt="Samsung TV">
                 <div>
                 <i class="fas fa-truck"></i>
-                <p class = "precio">$23.200<p/> 
+                <p class = "precio">$23.200</p> 
                 <p class = "descuento">5% OFF</p>
                 <p class = "descrip"><strong>SmartTv Samsung 43"</strong></p>
                 </div>
