--- a/src/views/login.html
+++ b/src/views/login.html
@@ -52,67 +52,17 @@
         </div>
     </header>
     <main>
-        <form class="registro" action="/datos-registro" method="POST">
-            <section class="datos_basicos">
-                <div>
-                    <input type="text" name="nombre_y_apellido" id="nombre_y_apellido" placeholder="Nombre y apellido"
-                        minlength="10" required>
-                </div>
-                <div>
-                    <input type="text" name="nombre_usuario" id="nombre_usuario" placeholder="Nombre de usuario"
-                        minlength="6" required>
-                </div>
-                <div>
-                    <input type="email" name="email" id="email" placeholder="Email" required>
-                </div>
-                <div>
-                    <h3><label for="fecha_nacimiento"> Fecha de Nacimiento</label></h3>
+        <form class="login" action="/datos-login" method="POST">
+            <div class="login_useer">
+                <input type="text" name="nombre_usuario" id="nombre_usuario" placeholder="Nombre de usuario" required>
+            </div>
+            <div class="login_pass"><input type="password" name="contraseña" id="pass" placeholder="Contraseña"
+                    minlength="8" required></div>
 
-
-                    <input type="date" name="fecha_nacimiento" id="fecha_nacimiento" required>
-                </div>
-                <div>
-                    <input type="text" name="domicilio" id="domicilio" placeholder="Domicilio">
-                </div>
-            </section>
-            <section class="perfilUsuario">
-                <h3>Perfil del usuario </h3>
-
-                <label for="perfil_usuario">
-                    <input type="radio" name="perfil_usuario" id="perfil_usuario" value="comprador"> Comprador
-                </label>
-                <label for="perfil_usuario">
-                    <input type="radio" name="perfil_usuario" id="perfil_usuario" value="vendedor"> vendedor
-                </label>
-
-            </section>
-            <section class="intereses">
-                <h3><label for="intereses">Intereses</label></h3>
-
-                <div><input type="checkbox" name="intereses" id="intereses" value="Electro"><span>Electro</span> </div>
-                <div> <input type="checkbox" value="Moda" name="intereses" id="intereses"><span>Moda</span></div>
-                <div><input type="checkbox" value="Hogar" name="intereses" id="intereses"><span>Hogar</span></div>
-                <div><input type="checkbox" value="Jugueteria" name="intereses" id="intereses"><span>Juguetería</span>
-                </div>
-                <div><input type="checkbox" value="Vida Sana" name="intereses" id="intereses"><span>Vida Sana</span>
-                </div>
-            </section>
-            <section class="foto">
-                <h3><label for="foto_perfil">Foto de perfil</label></h3>
-                <div><input type="file" name="foto_perfil" id="foto_perfil"></div>
-            </section>
-            <section class="password">
-                <h3><label for="pass">Contraseña</label></h3>
-                <div><input type="password" name="contraseña" id="pass" placeholder="Elegí tu contraseña" minlength="8"
-                        required></div>
-                <div><input type="password" name="confirmar_contraseña" id="confirm_pass"
-                        placeholder="Volvé a ingresar la contraseña que elegiste" required></div>
-            </section>
-
-            <a  href="/login">
-                <button class="enviar" type="submit" > Enviar </button>
+            <a href="/login">
+                <button class="enviar" type="submit"> Enviar </button>
             </a>
-           
+
         </form>
     </main>
     <footer>
